fix(subsite): Fix z-index to make it clickable - refs #253352

--- a/theme/themes/eea/extras/header.less
+++ b/theme/themes/eea/extras/header.less
@@ -318,7 +318,8 @@
 }
 
 .eea.header .subsite-logo {
-  position: relative;
+  position: @subsitePosition;
+  z-index: @subsiteZIndex;
   color: @subsiteColor;
   font-family: @subsiteFontFamily;
   font-size: @mobileSubsiteFontSize;
